# MillaCore-Fusion

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  BUILD_SUMMARY.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_PROGRESS.md  CONSOLIDATION_STATUS.md  CONTRIBUTING.md  DOCS.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  SESSION_SUMMARY.md  SUMMARY.md  auto_pr.py  docker-compose.dev.yml  memoryService.ts  milla-monorepo-skeleton.patch  package-lock.json  package.json  pyproject.toml  routes.ts  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  fusion.yml  monorepo-ci.yml
apps/gemini-assistant/: MIGRATION_SOURCE.txt  README.md  package.json
apps/milla-core/: README.md
apps/milla-gem/: App.tsx  MIGRATION_SOURCE.txt  MIGRATION_STATUS.md  README.md  index.html  metadata.json  package.json  types.ts
apps/portal/: index.html  package.json
apps/rayne-grok/: .dockerignore  .env.example  .gitignore  AGENT_SYSTEM_INTEGRATION.md  BRANCH_CLEANUP_GUIDE.md  CICD_DOCUMENTATION.md  CODEBASE_OPTIMIZATION_RECOMMENDATIONS.md  Dockerfile  ENHANCEMENTS_IMPLEMENTATION_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_ADVANCED_FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PR188.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PROACTIVE_SYSTEM.md  IMPLEMENTATION_SUMMARY_PRODUCTION_LAUNCH.md  MIGRATION_SOURCE.txt  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PHASE_II_IMPLEMENTATION_COMPLETE.md  PUBLIC_LAUNCH_TODO.md  README.md  REPOSITORY_ENHANCEMENT_GUIDE.md  SECURITY.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_SUMMARY.md  V_RAG_IMPLEMENTATION_SUMMARY.md  codecov.yml  docker-compose.yml  package.json  scene-demo.html  tailwind.config.ts  typedoc.json  vite.config.ts  vitest.config.server.ts
apps/rayne-grok-server/: MIGRATION_STATUS.md
apps/rayne-grok-web/: MIGRATION_STATUS.md
apps/server/: package.json  updater.js  updater.ts
core/: ModelDispatcher.ts
scripts/: README.md  apply_consolidation.py  auto_consolidate.py  dedupe.py  migrate_repos.sh
(+279 files in other folders)
